# FileSorter

./: .dockerignore  .gitignore  Dockerfile  README.md  analytics.py  config.py  coordinate_file.py  coordinates_file.py  dbase.py  dbase.sql  gravic_files.py  gravity_report.py  loader.py  plotting.py  processing.py  pyproject.toml  requirements.txt  sorter.py
drafts/: analytics.py
sorters/: gravic_sorter.py  seismic_sorter.py
ui/: SeisDefectViewer.ui  seis_defect_viewer.py
vibro-stend/: config.py  main.py  processing.py  scintrex.py
vibro-stend/backup/: vibrostand-20220119.py  vibrostand-20220120.py  vibrostand-20220121.py  vibrostend-grav-1418-20220119.py  vibrostend-grav-1418-20220120.py  vibrostend-grav-458-20220120.py  vibrostend-grav-458-20220121.py
