[tool.poetry]
name = "file_sorter"
version = "0.1.0"
description = "Утилита подготовки структуры папок для совместной обработки
               гравиметрических и сейсмических данных"
authors = ["Michael Chernov<mihail.tchernov@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.3"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
